[metadata]
name = unitree-sim
version = 0.1.0
author = Shubhankar Mondal
author_email = 162032595+shubhankarmondal@users.noreply.github.com
description = Research-grade Unitree + MuJoCo simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shubhankarmondal/Unitree_Sim
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    torch
    gymnasium
    mujoco
    matplotlib
